# kokkos-cilk-plugin

./: CMakeLists.txt  README.md
cmake/: ConfigurePlugin.cmake  KokkosCore_config_cilkplus.h.in  LinkCoreTPL.cmake
cmake/Modules/: FindEMU.cmake
core/src/: CMakeLists.txt  Kokkos_CilkPlus.hpp  Kokkos_Setup_CilkPlus.hpp
core/src/CilkPlus/: Kokkos_CilkEmu_Reduce.hpp  Kokkos_CilkPlus.cpp  Kokkos_CilkPlus_Range.hpp  Kokkos_CilkPlus_Reduce.hpp
core/src/decl/: Kokkos_Declare_CILKPLUS.hpp
core/src/fwd/: Kokkos_Fwd_CILKPLUS.hpp
core/unit_test/: CMakeLists.txt
core/unit_test/cilkplus/: TestCilkPlus_Category.hpp  TestCilkPlus_SharedAlloc.cpp
